[gd_scene load_steps=10 format=3 uid="uid://bgfs73fiq64l7"]

[ext_resource type="Script" uid="uid://cxemxy7k2dtj0" path="res://scene/sign/key_sign.gd" id="1_x2hus"]
[ext_resource type="Texture2D" uid="uid://dowy1qtnfqhm2" path="res://art/decotiles.png" id="2_x2hus"]
[ext_resource type="Texture2D" uid="uid://bixtee7u1j017" path="res://art/keys/W-Key.png" id="3_x2hus"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2yoy"]
atlas = ExtResource("2_x2hus")
region = Rect2(100, 102, 100, 99)

[sub_resource type="SpriteFrames" id="SpriteFrames_vsijc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2yoy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsijc"]
size = Vector2(120, 105)

[sub_resource type="Animation" id="Animation_3a4ia"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jyykm"]
resource_name = "cycle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tl8d6"]
_data = {
&"RESET": SubResource("Animation_3a4ia"),
&"cycle": SubResource("Animation_jyykm")
}

[node name="KeySign" type="Node2D"]
script = ExtResource("1_x2hus")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -49)
sprite_frames = SubResource("SpriteFrames_vsijc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -52.5)
shape = SubResource("RectangleShape2D_vsijc")

[node name="Key" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -163)
scale = Vector2(2, 2)
texture = ExtResource("3_x2hus")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Key"]
libraries = {
&"": SubResource("AnimationLibrary_tl8d6")
}
autoplay = "cycle"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
